// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterPowerLevel Container should render CharacterPowerLevel 1`] = `
<div>
  <Component
    id={1}
    isLoading={false}
    powerLevels={
      Object {
        "data": Array [],
        "isLoading": false,
      }
    }
  />
</div>
`;

exports[`CharacterPowerLevel Container should render CharacterPowerLevel with loading spinner 1`] = `
<div>
  <Component
    id={1}
    isLoading={true}
    powerLevels={
      Object {
        "data": Array [],
        "isLoading": true,
      }
    }
  />
</div>
`;
